# AxumHtmxPP

./: Cargo.toml  Dockerfile  README.md  fly.toml
src/: main.rs  models.rs  template.rs
templates/: createroom.html  point.html  pointing.html  pointingbuttons.html  pointpage.html  rooms.html  testtemplate.html
